fix architecture test and add TODOs for other pageable request with left joint fetch